# AIirplane_war

./: Animation.cpp  Animation.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CMakeLists.txt.user.dd93d47  EnemyPlane.cpp  EnemyPlane.h  Entity.h  Game.cpp  Game.h  Global.h  Manager.h  Map.cpp  Map.h  PlayerPlane.cpp  PlayerPlane.h  README.md  Resource.qrc  Sprite.cpp  Sprite.h  main.cpp
